--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -71,36 +71,23 @@ title: The Linear Isomorphic Keybaord
     <div class="col-sm-12 col-md-6">
       <a href="/articles#reflections"><h3 class="articles__subheader graphit-xl-bold">Reflections</h3></a>
       <div class="articles">
-        <div class="article">
-          <a href="/reflections/reflection-3">
-            <h4 class="article__title">Reflection #3: 33 Hours</h4>
-            <div class="row justify-content-center">
-              <div class="col-sm-12 col-md-10 ivar-soft-sm-regular">
-                &nbsp;&nbsp;&nbsp;&nbsp;I reflect on why the Linear Isomorphic Keyboard’s meteoric improvement, as well as strategies for sight reading and playing by ear that are tailored to each keyboard.
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="article">
-          <a href="/reflections/reflection-2">
-            <h4 class="article__title">Reflection #2: 15 Hours</h4>
-            <div class="row justify-content-center">
-              <div class="col-sm-12 col-md-10 ivar-soft-sm-regular">
-                &nbsp;&nbsp;&nbsp;&nbsp;I reflect on my slow progress on the Linear Isomorphic Keyboard, how I can improve exercises that use software, as well as my philosophy of how I should practice to improve depending on the content.
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="article">
-          <a href="/reflections/reflection-1/">
-            <h4 class="article__title">Reflection #1: The Assessment</h4>
-            <div class="row justify-content-center">
-              <div class="col-sm-12 col-md-10 ivar-soft-sm-regular">
-                &nbsp;&nbsp;&nbsp;&nbsp;In my efforts to get the experiment underway the initial assessment was done hastily, causing several small mistakes, as well as a blunder that was as interesting as it was humbling.
-              </div>
-            </div>
-          </a>
-        </div>
+        <%= partial "/partials/article-preview", locals: { 
+          link: "/reflections/reflection-3", 
+          title: "Reflection #3: 33 Hours", 
+          description: "&nbsp;&nbsp;&nbsp;&nbsp;I reflect on why the Linear Isomorphic Keyboard’s meteoric improvement, as well as strategies for sight reading and playing by ear that are tailored to each keyboard." 
+        } %>
+
+        <%= partial "/partials/article-preview", locals: { 
+          link: "/reflections/reflection-2", 
+          title: "Reflection #2: 15 Hours", 
+          description: "&nbsp;&nbsp;&nbsp;&nbsp;I reflect on my slow progress on the Linear Isomorphic Keyboard, how I can improve exercises that use software, as well as my philosophy of how I should practice to improve depending on the content." 
+        } %>
+
+        <%= partial "/partials/article-preview", locals: { 
+          link: "/reflections/reflection-1/", 
+          title: "Reflection #1: The Assessment", 
+          description: "&nbsp;&nbsp;&nbsp;&nbsp;In my efforts to get the experiment underway the initial assessment was done hastily, causing several small mistakes, as well as a blunder that was as interesting as it was humbling." 
+        } %>
       </div>
       <div class="articles__footer ivar-soft-sm-regular">
         <a href="/articles" class="">more reflections</a>
@@ -109,36 +96,23 @@ title: The Linear Isomorphic Keybaord
     <div class="col-sm-12 col-md-6">
       <a href="/articles"><h3 class="articles__subheader articles__subheader--second graphit-xl-bold">Articles</h3></a>
       <div class="articles"> 
-        <div class="article">
-          <a href="/articles/the-idea">
-            <h4 class="article__title">The Idea</h4>
-            <div class="row justify-content-center">
-              <div class="col-sm-12 col-md-10 ivar-soft-sm-regular">
-                &nbsp;&nbsp;&nbsp;&nbsp;The Traditional Keyboard design was fantastic for its time, but music changed radically since, and now the Linear Isomorphic Keyboard offers a possible improvement.
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="article">
-          <a href="/articles/the-hypotheses">
-            <h4 class="article__title">The Hypotheses</h4>
-            <div class="row justify-content-center">
-              <div class="col-sm-12 col-md-10 ivar-soft-sm-regular">
-                &nbsp;&nbsp;&nbsp;&nbsp;I have a handful of predictions of how the Linear Isomorphic Keyboard will compare to the Traditional Keyboard, and these hypotheses are based on yet another hypothesis: the isomorphic advantage.
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="article">
-          <a href="/articles/the-experiment">
-            <h4 class="article__title">The Experiment</h4>
-            <div class="row justify-content-center">
-              <div class="col-sm-12 col-md-10 ivar-soft-sm-regular">
-                &nbsp;&nbsp;&nbsp;&nbsp;In this article I define "playability", explain how I will practice and measure improvement, and reflect on flaws in the experiment.
-              </div>
-            </div>
-          </a>
-        </div>
+        <%= partial "/partials/article-preview", locals: { 
+          link: "/articles/the-idea", 
+          title: "The Idea", 
+          description: "&nbsp;&nbsp;&nbsp;&nbsp;The Traditional Keyboard design was fantastic for its time, but music changed radically since, and now the Linear Isomorphic Keyboard offers a possible improvement." 
+        } %>
+
+        <%= partial "/partials/article-preview", locals: { 
+          link: "/articles/the-hypotheses", 
+          title: "The Hypotheses", 
+          description: "&nbsp;&nbsp;&nbsp;&nbsp;I have a handful of predictions of how the Linear Isomorphic Keyboard will compare to the Traditional Keyboard, and these hypotheses are based on yet another hypothesis: the isomorphic advantage." 
+        } %>
+
+        <%= partial "/partials/article-preview", locals: { 
+          link: "/articles/the-experiment", 
+          title: "The Experiment", 
+          description: "&nbsp;&nbsp;&nbsp;&nbsp;I have a handful of predictions of how the Linear Isomorphic Keyboard will compare to the Traditional Keyboard, and these hypotheses are based on yet another hypothesis: the isomorphic advantage." 
+        } %>
       </div>
       <div class="articles__footer ivar-soft-sm-regular">
         <a href="/articles" class="">more articles</a>
