Revise text on progress page.

--- a/source/progress/index.html.erb
+++ b/source/progress/index.html.erb
@@ -4,7 +4,7 @@
   <h1 class="section__header">Progress</h1>
   <div class="section__content">
     <div class="row">
-      <div class="col progress__description">In order to my ability to play each keyboard, I have defined many increments of difficulty for each exercise I will practice. Often these increments are just increasing tempos, but the increments for sight reading and playing by ear can change other attributes such as the size of the largest increment. The charts below show the cumulative number of increments I was able to play for each practice session.</div>
+      <div class="col progress__description">In order to my ability to play each keyboard, I have defined many increments of difficulty for each exercise I will practice. Most often these increments are increasing tempos. The charts below show the cumulative number of increments I was able to play for each practice session.</div>
     </div>
     
     <div class="row">
