Add mobile styling for practice session show.

--- a/source/stylesheets/custom/_practice-session-show.css.scss
+++ b/source/stylesheets/custom/_practice-session-show.css.scss
@@ -9,24 +9,43 @@
     margin: 0;
   }
   .practice-session__date {
-    display: inline-block;
     color: $color-gray;
+    display: block;
+    font-size: 1.5rem;
+    @media screen and (min-width: 576px) {
+      display: inline-block;
+      font-size: inherit;
+    }
   }
   .practice-session__notes {
-    margin: 0 2rem;
+    margin: 1rem;
+    @media screen and (min-width: 576px) {
+      margin: 0 2rem;
+    }
   }
 
   .domains {
-    margin-top: 2rem;
+    margin-top: 0rem;
+    @media screen and (min-width: 576px) {
+      margin-top: 2rem;
+    }
   }
   .domain {
     margin: 2rem 0 3rem;
   }
+  // graphit-xl-regular
   .domain-header, 
   .total-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    font-family: Graphit;
+    font-weight: 400;
+    font-size: 1.8rem;
+    @media screen and (min-width: 576px) {
+      font-size: 3rem;
+    }
   }
   .domain-header__time,
   .total-header__time {
@@ -34,10 +53,15 @@
   }
   .domain-header__divider {
     flex-grow: 1;
-    border-top: 3px solid $color-gray;
-    border-bottom: 3px solid $color-gray;
     height: 0;
-    margin: 0 1.5rem 0;
+    border-top: 1.5px solid $color-gray;
+    border-bottom: 1.5px solid $color-gray;
+    margin: 0 0.5rem 0;
+    @media screen and (min-width: 576px) {
+      border-top: 3px solid $color-gray;
+      border-bottom: 3px solid $color-gray;
+      margin: 0 1.5rem 0;
+    }
   }
 
   .exercise-set {
@@ -54,10 +78,16 @@
   }
   .exercise-set__divider {
     flex-grow: 1;
-    border-top: 1.5px solid $color-gray;
-    border-bottom: 1.5px solid $color-gray;
     height: 0;
-    margin:  0 1.5rem 0;
+  
+    border-top: 1px solid $color-gray;
+    border-bottom: 1px solid $color-gray;
+    margin: 0 0.5rem 0;
+    @media screen and (min-width: 576px) {
+      border-top: 1.5px solid $color-gray;
+      border-bottom: 1.5px solid $color-gray;
+      margin: 0 1.5rem 0;
+    }
   }
 
   .exercise-set__data {
@@ -79,7 +109,17 @@
     margin: 4rem 0 3rem;
   }
   .total-increments {
-    margin: 1rem 0 1rem 40px;
+    margin: 1rem 0 1rem 1rem;
+    @media screen and (min-width: 576px) {
+      margin: 1rem 0 1rem 40px;
+    }
+  }
+
+  ul {
+    padding-left: 1rem;
+    @media screen and (min-width: 576px) {
+      padding-left: 40px;
+    }
   }
 
 }
