Add mobile styling for the hypotheses.

--- a/source/articles/the-hypotheses.html.md.erb
+++ b/source/articles/the-hypotheses.html.md.erb
@@ -41,285 +41,9 @@ Below is a graph of all of the twelve intervals within an octave, and all of the
 
 <% end %>
 
+<%= partial "partials/mobile-interval-shapes-section" %>
+<%= partial "partials/interval-shapes-section" %>
 
-<div class="intervals-shapes-section ivar-soft-xs-regular breakout">
-  <h3 class="intervals-shapes-graph__label">TK</h3>
-  <div class="intervals-shapes-graph intervals-shapes-graph--tk">
-    <div class="nodes intervals">
-      <div class="node interval" id="rec0vNdSsnZkIcA4X" name="Minor 2nd">
-        <span class="label-temp">Minor 2nd</span>
-        <div class="node__visual" style="background-color: #cfdfff"></div>
-      </div>
-      <div class="node interval" id="recS58DmkLKu2grR9" name="Major 2nd">
-        <span class="label-temp">Major 2nd</span>
-        <div class="node__visual" style="background-color: #d0f0fd"></div>
-      </div>
-      <div class="node interval" id="recdeN9izKLz6FxLx" name="Minor 3rd">
-        <span class="label-temp">Minor 3rd</span>
-        <div class="node__visual" style="background-color: #c2f5e9"></div>
-      </div>
-      <div class="node interval" id="reckvpdIs6Xuq1HVj" name="Major 3rd">
-        <span class="label-temp">Major 3rd</span>
-        <div class="node__visual" style="background-color: #d1f7c4"></div>
-      </div>
-      <div class="node interval" id="recH91UnZq5M46BN2" name="Perfect 4th">
-        <span class="label-temp">Perfect 4th</span>
-        <div class="node__visual" style="background-color: #ffeab6"></div>
-      </div>
-      <div class="node interval" id="receqRQ6G8fmCtEVx" name="Tritone">
-        <span class="label-temp">Tritone</span>
-        <div class="node__visual" style="background-color: #fee2d5"></div>
-      </div>
-      <div class="node interval" id="recZbKFnM0QfVkOmm" name="Perfect 5th">
-        <span class="label-temp">Perfect 5th</span>
-        <div class="node__visual" style="background-color: #ffdce5"></div>
-      </div>
-      <div class="node interval" id="recyMPEnGXy97mxll" name="Minor 6th">
-        <span class="label-temp">Minor 6th</span>
-        <div class="node__visual" style="background-color: #ffdaf6"></div>
-      </div>
-      <div class="node interval" id="recLsI9cI3dAimpvR" name="Major 6th">
-        <span class="label-temp">Major 6th</span>
-        <div class="node__visual" style="background-color: #ede2fe"></div>
-      </div>
-      <div class="node interval" id="reczsYyfXWbFv1v1d" name="Minor 7th">
-        <span class="label-temp">Minor 7th</span>
-        <div class="node__visual" style="background-color: #9cc7ff"></div>
-      </div>
-      <div class="node interval" id="recyyC3ERyaf28Xn6" name="Major 7th">
-        <span class="label-temp">Major 7th</span>
-        <div class="node__visual" style="background-color: #77d1f3"></div>
-      </div>
-      <div class="node interval" id="rec8sFmzq4bUF9g3D" name="Octave">
-        <span class="label-temp">Octave</span>
-        <div class="node__visual" style="background-color: #72ddc3"></div>
-      </div>
-    </div>
-    <div class="nodes shapes">
-      <div class="node" id="recwYr1BR7SJOhV2K" name="WB1">
-        <div class="node__visual"><%= svg "interval-chart/wb-circle" %></div>
-        <span class="label-temp">1</span>
-      </div>
-      <div class="node" id="recpPTjrPCoWEqHqc" name="BW1">
-        <div class="node__visual"><%= svg "interval-chart/bw-circle" %></div>
-        <span class="label-temp">1</span>
-      </div>
-      <div class="node" id="recuYrPcvwNMSr4Sy" name="WW2">
-        <div class="node__visual"><%= svg "interval-chart/ww-circle" %></div>
-        <span class="label-temp">2</span>
-      </div>
-      <div class="node" id="recstZnrrXgGG0YOa" name="BB2">
-        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
-        <span class="label-temp">2</span>
-      </div>
-      <div class="node" id="reca2z9JHoJ599b0e" name="WB3">
-        <div class="node__visual"><%= svg "interval-chart/wb-circle" %></div>
-        <span class="label-temp">3</span>
-      </div>
-      <div class="node" id="recVEelstSUtfbWsw" name="BW3">
-        <div class="node__visual"><%= svg "interval-chart/bw-circle" %></div>
-        <span class="label-temp">3</span>
-      </div>
-      <div class="node" id="recI4GQgm65zG0mWf" name="WW4">
-        <div class="node__visual"><%= svg "interval-chart/ww-circle" %></div>
-        <span class="label-temp">4</span>
-      </div>
-      <div class="node" id="recIhXSA4YZRwrq4w" name="BB4">
-        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
-        <span class="label-temp">4</span>
-      </div>
-      <div class="node" id="recG4t1WiOR1DM2tc" name="WB5">
-        <div class="node__visual"><%= svg "interval-chart/wb-circle" %></div>
-        <span class="label-temp">5</span>
-      </div>
-      <div class="node" id="reclgFxnI22C1BFhd" name="BW5">
-        <div class="node__visual"><%= svg "interval-chart/bw-circle" %></div>
-        <span class="label-temp">5</span>
-      </div>
-      <div class="node" id="rec9HUG3nu1eZHs1L" name="WW6">
-        <div class="node__visual"><%= svg "interval-chart/ww-circle" %></div>
-        <span class="label-temp">6</span>
-      </div>
-      <div class="node" id="recEVTjwd7ySM8R4J" name="BB6">
-        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
-        <span class="label-temp">6</span>
-      </div>
-      <div class="node" id="rec7EU4KfVep7D6Sa" name="WB7">
-        <div class="node__visual"><%= svg "interval-chart/wb-circle" %></div>
-        <span class="label-temp">7</span>
-      </div>
-      <div class="node" id="recBxv0fvY0pkuVkJ" name="BW7">
-        <div class="node__visual"><%= svg "interval-chart/bw-circle" %></div>
-        <span class="label-temp">7</span>
-      </div>
-      <div class="node" id="recY743bibqUglxhX" name="WW8">
-        <div class="node__visual"><%= svg "interval-chart/ww-circle" %></div>
-        <span class="label-temp">8</span>
-      </div>
-      <div class="node" id="rectMuASyozV4jN2j" name="BB8">
-        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
-        <span class="label-temp">8</span>
-      </div>
-      <div class="node" id="rec4lvBafSjpf6iUm" name="WB9">
-        <div class="node__visual"><%= svg "interval-chart/wb-circle" %></div>
-        <span class="label-temp">9</span>
-      </div>
-      <div class="node" id="recOz4xQj9DEV4olt" name="BW9">
-        <div class="node__visual"><%= svg "interval-chart/bw-circle" %></div>
-        <span class="label-temp">9</span>
-      </div>
-      <div class="node" id="recQVcnBLRQycKSkz" name="WW10">
-        <div class="node__visual"><%= svg "interval-chart/ww-circle" %></div>
-        <span class="label-temp">10</span>
-      </div>
-      <div class="node" id="recxRi3kOFTsWucav" name="BB10">
-        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
-        <span class="label-temp">10</span>
-      </div>
-      <div class="node" id="recwgjsitkTZuMC7l" name="WB11">
-        <div class="node__visual"><%= svg "interval-chart/wb-circle" %></div>
-        <span class="label-temp">11</span>
-      </div>
-      <div class="node" id="recB9zg5H5TwGtp7e" name="BW11">
-        <div class="node__visual"><%= svg "interval-chart/bw-circle" %></div>
-        <span class="label-temp">11</span>
-      </div>
-      <div class="node" id="recppuCcNqM6FkJyH" name="WW12">
-        <div class="node__visual"><%= svg "interval-chart/ww-circle" %></div>
-        <span class="label-temp">12</span>
-      </div>
-      <div class="node" id="recBe3PY2ElHu4G6x" name="BB12">
-        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
-        <span class="label-temp">12</span>
-      </div>
-      <div class="node" id="reciaFs54NU3QcW5a" name="WB13">
-        <div class="node__visual"><%= svg "interval-chart/wb-circle" %></div>
-        <span class="label-temp">13</span>
-      </div>
-      <div class="node" id="recwnb2NblRpgcTQH" name="BW13">
-        <div class="node__visual"><%= svg "interval-chart/bw-circle" %></div>
-        <span class="label-temp">13</span>
-      </div>
-      <div class="node" id="recCBGfwxnRisN5v6" name="WW14">
-        <div class="node__visual"><%= svg "interval-chart/ww-circle" %></div>
-        <span class="label-temp">14</span>
-      </div>
-      <div class="node" id="recwkWJhG5WlEHqAw" name="BB14">
-        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
-        <span class="label-temp">14</span>
-      </div>
-    </div>
-  </div>
-
-  <div class="legend-container">
-    <img src="/images/interval-chart/legend.svg" alt="Legend for intervals-shapes graph" class="legend"/>
-  </div>
-
-  <h3 class="intervals-shapes-graph__label">LIK</h3>
-  <div class="intervals-shapes-graph intervals-shapes-graph--lik">
-    <div class="nodes intervals">
-      <div class="node interval" id="lik-minor-2nd" name="Minor 2nd">
-        <span class="label-temp">Minor 2nd</span>
-        <div class="node__visual" style="background-color: #cfdfff"></div>
-      </div>
-      <div class="node interval" id="lik-major-2nd" name="Major 2nd">
-        <span class="label-temp">Major 2nd</span>
-        <div class="node__visual" style="background-color: #d0f0fd"></div>
-      </div>
-      <div class="node interval" id="lik-minor-3rd" name="Minor 3rd">
-        <span class="label-temp">Minor 3rd</span>
-        <div class="node__visual" style="background-color: #c2f5e9"></div>
-      </div>
-      <div class="node interval" id="lik-major-3rd" name="Major 3rd">
-        <span class="label-temp">Major 3rd</span>
-        <div class="node__visual" style="background-color: #d1f7c4"></div>
-      </div>
-      <div class="node interval" id="lik-perfect-4th" name="Perfect 4th">
-        <span class="label-temp">Perfect 4th</span>
-        <div class="node__visual" style="background-color: #ffeab6"></div>
-      </div>
-      <div class="node interval" id="lik-tritone" name="Tritone">
-        <span class="label-temp">Tritone</span>
-        <div class="node__visual" style="background-color: #fee2d5"></div>
-      </div>
-      <div class="node interval" id="lik-perfect-5th" name="Perfect 5th">
-        <span class="label-temp">Perfect 5th</span>
-        <div class="node__visual" style="background-color: #ffdce5"></div>
-      </div>
-      <div class="node interval" id="lik-minor-6th" name="Minor 6th">
-        <span class="label-temp">Minor 6th</span>
-        <div class="node__visual" style="background-color: #ffdaf6"></div>
-      </div>
-      <div class="node interval" id="lik-major-6th" name="Major 6th">
-        <span class="label-temp">Major 6th</span>
-        <div class="node__visual" style="background-color: #ede2fe"></div>
-      </div>
-      <div class="node interval" id="lik-minor-7th" name="Minor 7th">
-        <span class="label-temp">Minor 7th</span>
-        <div class="node__visual" style="background-color: #9cc7ff"></div>
-      </div>
-      <div class="node interval" id="lik-major-7th" name="Major 7th">
-        <span class="label-temp">Major 7th</span>
-        <div class="node__visual" style="background-color: #77d1f3"></div>
-      </div>
-      <div class="node interval" id="lik-octave" name="Octave">
-        <span class="label-temp">Octave</span>
-        <div class="node__visual" style="background-color: #72ddc3"></div>
-      </div>
-    </div>
-
-    <div class="nodes shapes">
-      <div class="node" id="lik-1">
-        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
-        <span class="label-temp">1</span>
-      </div>
-      <div class="node" id="lik-2">
-        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
-        <span class="label-temp">2</span>
-      </div>
-      <div class="node" id="lik-3">
-        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
-        <span class="label-temp">3</span>
-      </div>
-      <div class="node" id="lik-4">
-        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
-        <span class="label-temp">4</span>
-      </div>
-      <div class="node" id="lik-5">
-        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
-        <span class="label-temp">5</span>
-      </div>
-      <div class="node" id="lik-6">
-        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
-        <span class="label-temp">6</span>
-      </div>
-      <div class="node" id="lik-7">
-        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
-        <span class="label-temp">7</span>
-      </div>
-      <div class="node" id="lik-8">
-        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
-        <span class="label-temp">8</span>
-      </div>
-      <div class="node" id="lik-9">
-        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
-        <span class="label-temp">9</span>
-      </div>
-      <div class="node" id="lik-10">
-        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
-        <span class="label-temp">10</span>
-      </div>
-      <div class="node" id="lik-11">
-        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
-        <span class="label-temp">11</span>
-      </div>
-      <div class="node" id="lik-12">
-        <div class="node__visual"><%= svg "interval-chart/bb-circle" %></div>
-        <span class="label-temp">12</span>
-      </div>
-    </div>
-  </div>
-</div>
 
 <% partial "/partials/article-layout" do %>
 
