--- a/source/javascripts/pages/the-hypotheses.js.erb
+++ b/source/javascripts/pages/the-hypotheses.js.erb
@@ -52,13 +52,13 @@ function getCenter(node) {
 
 function createLineFromEdge(edgeData) {
   var interval = $("#" + edgeData.data.source)
-  var intervalNode = interval.querySelector(".node__visual")
+  var intervalNode = interval.querySelector(".node__circle")
   var intervalNodeCenter = getCenter(intervalNode);
   var intervalNodeCenterX = intervalNodeCenter[0];
   var intervalNodeCenterY = intervalNodeCenter[1];
 
   var shape = $("#" + edgeData.data.target);
-  var shapeNode = shape.querySelector(".node__visual");
+  var shapeNode = shape.querySelector(".node__circle");
   var shapeNodeCenter = getCenter(shapeNode);
   var shapeNodeCenterX = shapeNodeCenter[0];
   var shapeNodeCenterY = shapeNodeCenter[1];
@@ -87,6 +87,13 @@ function renderLinesAndEdges() {
   });
 }
 
+// Remove graph that I'm not using
+console.log(document.body.offsetWidth < 576)
+if (document.body.offsetWidth < 576) {
+  deleteElement($(".js-intervals-shapes-section")[0]);
+} else {
+  deleteElement($(".js-mobile-intervals-shapes-section")[0]);
+}
 
 renderLinesAndEdges();
 
