Add mobile styles for footer

--- a/source/partials/_footer.html.erb
+++ b/source/partials/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="container graphit-xs-regular">
+<footer class="container footer graphit-xs-regular">
   <div>
     The <span class="emphasis">Linear Isomorphic Keyboard</span> by <a href="markjanzer.io">Mark Janzer</a>
   </div>
