Create image for metadata. Make metadata partial

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,6 +2,15 @@
 title: The Linear Isomorphic Keybaord
 ---
 
+<%# Meta Tags %>
+<% content_for :metatags do %>
+  <%= partial "metatags", locals: {
+    url: "https://www.imagewall.com",
+    title: "ImageWall — Design and Order Custom Perforated Metal",
+    description: "ImageWall crafts custom perforated metal panel systems designed by you. Upload an image, get live pricing, and order your ImageWall system online."
+  } %>
+<% end %>
+
 <%= partial "partials/chartist-js" %>
 <script src="/javascripts/vendor/zenscroll.min.js"></script>
 
