--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -5,6 +5,8 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <%= yield :metatags %>
   
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-80177688-3"></script>
@@ -18,6 +20,7 @@
 
     <!-- Use the title from a page's frontmatter if it has one -->
     <title><%= current_page.data.title || "The Linear Isomorphic Keyboard" %></title>
+
     <%= stylesheet_link_tag "site" %>
     <%= javascript_include_tag "site" %>
   </head>
