--- a/source/articles/other-isomorphic-keyboards.html.md.erb
+++ b/source/articles/other-isomorphic-keyboards.html.md.erb
@@ -1,3 +1,10 @@
+<% content_for :metatags do %>
+  <%= partial "partials/metatags", locals: {
+    title: "Other Isomorphic Keyboards",
+    description: "Why not another isomorphic keyboard? The first isomorphic keyboard was designed in 1882, and there have been plenty of other designed since. I expand on why the Linear Isomorphic Keyboard’s similarities with the Traditional Keyboard could give it an advantage over other isomorphic keyboards.",
+  } %>
+<% end %>
+
 <% partial "/partials/article-layout" do %>
 
 <h1>Other Isomorphic Keyboards</h1>
