--- a/source/reflections/reflection-1.html.md.erb
+++ b/source/reflections/reflection-1.html.md.erb
@@ -1,3 +1,10 @@
+<% content_for :metatags do %>
+  <%= partial "partials/metatags", locals: {
+    title: "Reflection #1: The Assessment",
+    description: "The initial assessment was an enlightening comedy of errors. In my efforts to get the experiment underway the initial assessment was done hastily, causing several small mistakes, as well as a blunder that was as interesting as it was humbling.",
+  } %>
+<% end %>
+
 <% partial "/partials/article-layout" do %>
 
 # Reflection #1: The Assessment
