--- a/source/stylesheets/custom/_index.css.scss
+++ b/source/stylesheets/custom/_index.css.scss
@@ -73,7 +73,7 @@ body.index {
 
   .contact-text {
     margin-top: 2rem;
-    font-family: Ivar Soft;
+    font-family: $ivar-soft;
     line-height: 2;
   }
 
