--- a/source/stylesheets/custom/_progress.css.scss
+++ b/source/stylesheets/custom/_progress.css.scss
@@ -1,6 +1,6 @@
 .progress_index {
   .progress__description {
-    font-family: Ivar Soft;
+    font-family: $ivar-soft;
     margin: 1rem 0;
   }
 
