--- a/source/stylesheets/_general.css.scss
+++ b/source/stylesheets/_general.css.scss
@@ -4,7 +4,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Graphit";
+  font-family: $graphit;
 }
 
 ul {
@@ -61,7 +61,7 @@ img {
 
 .graphit-xxl-bold,
 .section__header {
-  font-family: Graphit;
+  font-family: $graphit;
   font-weight: 600;
   font-size: 3rem;
   @media screen and (min-width: 576px) {
@@ -69,7 +69,7 @@ img {
   }
 }
 .graphit-xxl-regular {
-  font-family: Graphit;
+  font-family: $graphit;
   font-weight: 400;
   font-size: 3rem;
   @media screen and (min-width: 576px) {
@@ -77,7 +77,7 @@ img {
   }
 }
 .graphit-xl-bold {
-  font-family: Graphit;
+  font-family: $graphit;
   font-weight: 600;
   font-size: 2rem;
   @media screen and (min-width: 576px) {
@@ -85,7 +85,7 @@ img {
   }
 }
 .graphit-xl-regular {
-  font-family: Graphit;
+  font-family: $graphit;
   font-weight: 400;
   font-size: 2rem;
   @media screen and (min-width: 576px) {
@@ -94,7 +94,7 @@ img {
 }
 .graphit-lg-regular,
 .article__title {
-  font-family: Graphit;
+  font-family: $graphit;
   font-weight: 400;
   font-size: 1.3125rem;
   @media screen and (min-width: 576px) {
@@ -102,7 +102,7 @@ img {
   }
 }
 .graphit-md-regular {
-  font-family: Graphit;
+  font-family: $graphit;
   font-weight: 400;
   font-size: 1rem;
   @media screen and (min-width: 576px) {
@@ -110,7 +110,7 @@ img {
   }
 }
 .graphit-sm-regular {
-  font-family: Graphit;
+  font-family: $graphit;
   font-weight: 400;
   font-size: 0.9rem;
   @media screen and (min-width: 576px) {
@@ -118,7 +118,7 @@ img {
   }
 }
 .graphit-xs-regular {
-  font-family: Graphit;
+  font-family: $graphit;
   font-weight: 400;
   font-size: 0.8rem;
   @media screen and (min-width: 576px) {
@@ -127,7 +127,7 @@ img {
 }
 .ivar-soft-md-regular,
 body {
-  font-family: 'Ivar Soft', serif;
+  font-family: $ivar-soft;
   font-weight: 400;
   font-size: 1.125rem;
   @media screen and (min-width: 576px) {
@@ -135,7 +135,7 @@ body {
   }
 }
 .ivar-soft-sm-regular {
-  font-family: Ivar Soft;
+  font-family: $ivar-soft;
   font-weight: 400;
   font-size: 0.9rem;
   @media screen and (min-width: 576px) {
@@ -143,7 +143,7 @@ body {
   }
 }
 .ivar-soft-xs-regular {
-  font-family: Ivar Soft;
+  font-family: $ivar-soft;
   font-weight: 400;
   font-size: 0.8rem;
   @media screen and (min-width: 576px) {
@@ -153,7 +153,7 @@ body {
 .ivar-display-xs-regular,
 .ct-axis-title,
 .ct-legend {
-  font-family: Ivar Display;
+  font-family: $ivar-display;
   font-weight: 400;
   font-size: 0.8rem;
   @media screen and (min-width: 576px) {
