--- a/source/stylesheets/custom/_the-hypotheses.css.scss
+++ b/source/stylesheets/custom/_the-hypotheses.css.scss
@@ -8,7 +8,7 @@
     }
 
     // ivar-soft-xs-regular
-    font-family: Ivar Soft;
+    font-family: $ivar-soft;
     font-weight: 400;
     font-size: 0.7rem;
     @media screen and (min-width: 576px) {
