--- a/source/stylesheets/settings.css.scss
+++ b/source/stylesheets/settings.css.scss
@@ -1,8 +1,8 @@
 $color-gray: #5f5f5f;
-// old
+// 
 // $color-gray: #838383;
 
 $graphit: "Graphit", "Helvetica Neue", Helvetica, Arial, sans-serif;
-$ivar-soft: "Ivar Soft", Baskerville, "Baskerville Old Face", "Hoefler Text", Garamond, "Times New Roman", serif;;
-$ivar-display: "Ivar Display", Baskerville, "Baskerville Old Face", "Hoefler Text", Garamond, "Times New Roman", serif;;
-$ivar-text: "Ivar Text", Baskerville, "Baskerville Old Face", "Hoefler Text", Garamond, "Times New Roman", serif;;
+$ivar-soft: "Ivar Soft", Baskerville, "Baskerville Old Face", "Hoefler Text", Garamond, "Times New Roman", serif;
+$ivar-display: "Ivar Display", Baskerville, "Baskerville Old Face", "Hoefler Text", Garamond, "Times New Roman", serif;
+$ivar-text: "Ivar Text", Baskerville, "Baskerville Old Face", "Hoefler Text", Garamond, "Times New Roman", serif;
